--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start":"nodemon index.js"
+    "dev": "node src/app.js",
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "Kelly Limo",
@@ -25,6 +26,7 @@
     "mongoose": "^8.6.3"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
