--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest",
-    "dev": "node src/app.js",
-    "start": "nodemon src/app.js"
+    "test": "node tests/api/users/users.test.js",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "Kelly Limo",
