--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node tests/api/users/users.test.js",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest tests/api/users/users.test.js --watchAll --runinBand",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
   },
@@ -26,8 +26,10 @@
     "mongoose": "^8.6.3"
   },
   "devDependencies": {
+    "chai": "^5.1.1",
     "colors": "^1.4.0",
     "jest": "^29.7.0",
+    "mocha": "^10.7.3",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
